@@ -38,14 +38,14 @@ COREHEADERS = xproto.h xcb_types.h
 CORESOURCES = xproto.c xcb_types.c
 COREPROTO   = $(CORESOURCES) $(COREHEADERS)
 
-xcbinclude_HEADERS = xcb.h xcbext.h xcbint.h $(COREHEADERS) $(EXTHEADERS)
+xcbinclude_HEADERS = xcb.h xcbext.h xcbxlib.h $(COREHEADERS) $(EXTHEADERS)
 
 CFLAGS =
 AM_CFLAGS = -include config.h $(CDEBUGFLAGS) $(XCBPROTO_CFLAGS) $(XPROTO_CFLAGS) $(XAU_CFLAGS)
 libXCB_la_LIBADD = $(XCBPROTO_LIBS) $(XPROTO_LIBS) $(XAU_LIBS)
 libXCB_la_SOURCES = \
 		xcb_conn.c xcb_out.c xcb_in.c xcb_ext.c xcb_xid.c \
-		xcb_list.c xcb_util.c xcb_auth.c xcb_des.c \
+		xcb_list.c xcb_util.c xcb_xlib.c xcb_auth.c xcb_des.c \
 		$(COREPROTO) $(EXTENSIONS)
 
 xcb_des.c:
