@@ -35,6 +35,18 @@
 #include "xcbint.h"
 #include "extensions/bigreq.h"
 
+static int force_sequence_wrap(XCBConnection *c)
+{
+    int ret = 1;
+    if((c->out.request - c->in.request_read) > 65530)
+    {
+        pthread_mutex_unlock(&c->iolock);
+        ret = XCBSync(c, 0);
+        pthread_mutex_lock(&c->iolock);
+    }
+    return ret;
+}
+
 /* Public interface */
 
 CARD32 XCBGetMaximumRequestLength(XCBConnection *c)
@@ -115,7 +127,7 @@ int XCBSendRequest(XCBConnection *c, unsigned int *request, struct iovec *vector
 
     /* get a sequence number and arrange for delivery. */
     pthread_mutex_lock(&c->iolock);
-    if(req->isvoid && !_xcb_out_force_sequence_wrap(c))
+    if(req->isvoid && !force_sequence_wrap(c))
     {
         pthread_mutex_unlock(&c->iolock);
         return -1;
@@ -171,18 +183,6 @@ void _xcb_out_destroy(_xcb_out *out)
     pthread_cond_destroy(&out->cond);
     pthread_mutex_destroy(&out->reqlenlock);
     free(out->vec);
-}
-
-int _xcb_out_force_sequence_wrap(XCBConnection *c)
-{
-    int ret = 1;
-    if((c->out.request - c->in.request_read) > 65530)
-    {
-        pthread_mutex_unlock(&c->iolock);
-        ret = XCBSync(c, 0);
-        pthread_mutex_lock(&c->iolock);
-    }
-    return ret;
 }
 
 int _xcb_out_write(XCBConnection *c)
