@@ -105,7 +105,6 @@ typedef struct _xcb_out {
 int _xcb_out_init(_xcb_out *out);
 void _xcb_out_destroy(_xcb_out *out);
 
-int _xcb_out_force_sequence_wrap(XCBConnection *c);
 int _xcb_out_write(XCBConnection *c);
 int _xcb_out_write_block(XCBConnection *c, struct iovec *vector, size_t count);
 int _xcb_out_flush(XCBConnection *c);
